--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - CSS Blossoming Flowers at Magical Night </title>
+  <title>Flowers For S</title>
   <link rel="stylesheet" href="./css/style.css">
 
 </head>
